Day 4 overflow issue

--- a/day4/css/styles.css
+++ b/day4/css/styles.css
@@ -1,6 +1,7 @@
 html, body {
   width: 100%;
 	margin: 0;
+  overflow-x: hidden;
 }
 
 .section-1 {
